--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -1,4 +1,7 @@
 {
+  "item.jolcraft.gold_coin": "Gold Coin",
+  "item.jolcraft.contract_blank": "Blank Contract",
+
   "item.jolcraft.dwarf_spawn_egg": "Dwarf Spawn Egg",
   "item.jolcraft.dwarf_guard_spawn_egg": "Dwarf Guard Spawn Egg",
 
