--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -1,14 +1,23 @@
 {
   "item.jolcraft.gold_coin": "Gold Coin",
+
+  "item.jolcraft.quill_full": "Ink and Quill",
+  "item.jolcraft.quill_half": "Ink and Quill",
+  "item.jolcraft.quill_small": "Ink and Quill",
+  "item.jolcraft.quill_empty": "Empty Ink and Quill",
+
   "item.jolcraft.contract_blank": "Blank Contract",
   "item.jolcraft.contract_written": "Written Contract",
   "item.jolcraft.contract_signed": "Signed Contract",
+  "item.jolcraft.contract_guard": "Guard Contract",
 
 
   "item.jolcraft.dwarf_spawn_egg": "Dwarf Spawn Egg",
   "item.jolcraft.dwarf_guard_spawn_egg": "Dwarf Guard Spawn Egg",
 
   "itemGroup.jolcraft.jolcraft_items_tab": "JolCraft",
+
+  "tooltip.jolcraft.contract_guard": "The contract echoes with duty",
 
   "entity.jolcraft.dwarf": "Dwarf",
   "entity.minecraft.dwarf": "Dwarf",
