--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.jolcraft.gold_coin": "Gold Coin",
+  "item.jolcraft.dwarven_lexicon": "Dwarven Lexicon",
 
   "item.jolcraft.quill_full": "Ink and Quill",
   "item.jolcraft.quill_half": "Ink and Quill",
@@ -18,6 +19,9 @@
   "itemGroup.jolcraft.jolcraft_items_tab": "JolCraft",
 
   "tooltip.jolcraft.contract_guard": "The contract echoes with duty",
+
+  "tooltip.jolcraft.dwarven_lexicon.locked": "The pages are filled with unfamiliar symbols",
+  "tooltip.jolcraft.dwarven_lexicon.unlocked": "The key to dwarven speech lies within",
 
   "entity.jolcraft.dwarf": "Dwarf",
   "entity.minecraft.dwarf": "Dwarf",
