--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -12,9 +12,30 @@
   "item.jolcraft.contract_signed": "Signed Contract",
   "item.jolcraft.contract_guard": "Guard Contract",
 
-
   "item.jolcraft.dwarf_spawn_egg": "Dwarf Spawn Egg",
   "item.jolcraft.dwarf_guard_spawn_egg": "Dwarf Guard Spawn Egg",
+  "item.jolcraft.dwarf_historian_spawn_egg": "Dwarf Historian Spawn Egg",
+
+  "item.jolcraft.aegiscore": "Aegiscore Gem",
+  "item.jolcraft.ashfang": "Ashfang Gem",
+  "item.jolcraft.deepmarrow": "Deepmarrow",
+  "item.jolcraft.earthblood": "Earthblood Gem",
+  "item.jolcraft.emberglass": "Emberglass Gem",
+  "item.jolcraft.frostvein": "Frostvein Gem",
+  "item.jolcraft.grimstone": "Grimstone Gem",
+  "item.jolcraft.ironheart": "Ironheart Gem",
+  "item.jolcraft.lumiere": "Lumiere Gem",
+  "item.jolcraft.moonshard": "Moonshard Gem",
+  "item.jolcraft.skyburrow": "Skyburrow Gem",
+  "item.jolcraft.sungleam": "Sungleam Gem",
+  "item.jolcraft.verdanite": "Verdanite Gem",
+  "item.jolcraft.woecrystal": "Woecrystal Gem",
+
+  "item.jolcraft.dwarven_tome": "Dwarven Tome",
+  "item.jolcraft.dwarven_tome_common": "Dwarven Tome",
+  "item.jolcraft.dwarven_tome_uncommon": "Dwarven Tome",
+  "item.jolcraft.dwarven_tome_rare": "Dwarven Tome",
+  "item.jolcraft.dwarven_tome_epic": "Dwarven Tome",
 
   "itemGroup.jolcraft.jolcraft_items_tab": "JolCraft",
 
@@ -23,10 +44,16 @@
   "tooltip.jolcraft.dwarven_lexicon.locked": "The pages are filled with unfamiliar symbols",
   "tooltip.jolcraft.dwarven_lexicon.unlocked": "The key to dwarven speech lies within",
 
+  "tooltip.jolcraft.dwarven_tome.locked": "The pages are filled with unfamiliar symbols",
+  "tooltip.jolcraft.dwarven_tome.unlocked": "A dwarven tome",
+
   "entity.jolcraft.dwarf": "Dwarf",
   "entity.minecraft.dwarf": "Dwarf",
   "entity.jolcraft.dwarf_guard": "Dwarf Guard",
   "entity.minecraft.dwarf_guard": "Dwarf Guard",
+  "entity.jolcraft.dwarf_historian": "Dwarf Historian",
+  "entity.minecraft.dwarf_historian": "Dwarf Historian",
+
 
   "filled_map.forge": "Map to a Dwarven Forge"
 }
