pre model rework

--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -16,20 +16,21 @@
   "item.jolcraft.dwarf_guard_spawn_egg": "Dwarf Guard Spawn Egg",
   "item.jolcraft.dwarf_historian_spawn_egg": "Dwarf Historian Spawn Egg",
 
-  "item.jolcraft.aegiscore": "Aegiscore Gem",
-  "item.jolcraft.ashfang": "Ashfang Gem",
+  "item.jolcraft.aegiscore": "Aegiscore",
+  "item.jolcraft.ashfang": "Ashfang",
   "item.jolcraft.deepmarrow": "Deepmarrow",
-  "item.jolcraft.earthblood": "Earthblood Gem",
-  "item.jolcraft.emberglass": "Emberglass Gem",
-  "item.jolcraft.frostvein": "Frostvein Gem",
-  "item.jolcraft.grimstone": "Grimstone Gem",
-  "item.jolcraft.ironheart": "Ironheart Gem",
-  "item.jolcraft.lumiere": "Lumiere Gem",
-  "item.jolcraft.moonshard": "Moonshard Gem",
-  "item.jolcraft.skyburrow": "Skyburrow Gem",
-  "item.jolcraft.sungleam": "Sungleam Gem",
-  "item.jolcraft.verdanite": "Verdanite Gem",
-  "item.jolcraft.woecrystal": "Woecrystal Gem",
+  "item.jolcraft.earthblood": "Earthblood",
+  "item.jolcraft.emberglass": "Emberglass",
+  "item.jolcraft.frostvein": "Frostvein",
+  "item.jolcraft.grimstone": "Grimstone",
+  "item.jolcraft.ironheart": "Ironheart",
+  "item.jolcraft.lumiere": "Lumiere",
+  "item.jolcraft.moonshard": "Moonshard",
+  "item.jolcraft.rustagate": "Rustagate",
+  "item.jolcraft.skyburrow": "Skyburrow",
+  "item.jolcraft.sungleam": "Sungleam",
+  "item.jolcraft.verdanite": "Verdanite",
+  "item.jolcraft.woecrystal": "Woecrystal",
 
   "item.jolcraft.dwarven_tome": "Dwarven Tome",
   "item.jolcraft.dwarven_tome_common": "Dwarven Tome",
