--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -15,6 +15,7 @@
   "item.jolcraft.dwarf_spawn_egg": "Dwarf Spawn Egg",
   "item.jolcraft.dwarf_guard_spawn_egg": "Dwarf Guard Spawn Egg",
   "item.jolcraft.dwarf_historian_spawn_egg": "Dwarf Historian Spawn Egg",
+  "item.jolcraft.dwarf_scrapper_spawn_egg": "Dwarf Scrapper Spawn Egg",
 
   "item.jolcraft.aegiscore": "Aegiscore",
   "item.jolcraft.ashfang": "Ashfang",
@@ -75,11 +76,9 @@
   "advancement.jolcraft.trade_with_dwarf.description": "Trade with a dwarf.",
 
   "entity.jolcraft.dwarf": "Dwarf",
-  "entity.minecraft.dwarf": "Dwarf",
-  "entity.jolcraft.dwarf_guard": "Dwarf Guard",
-  "entity.minecraft.dwarf_guard": "Dwarf Guard",
-  "entity.jolcraft.dwarf_historian": "Dwarf Historian",
-  "entity.minecraft.dwarf_historian": "Dwarf Historian",
+  "entity.jolcraft.dwarf_guard": "Guard",
+  "entity.jolcraft.dwarf_historian": "Historian",
+  "entity.jolcraft.dwarf_scrapper": "Scrapper",
 
   "filled_map.forge": "Map to a Dwarven Forge"
 }
