Guildmaster and start of contracts

--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -14,9 +14,25 @@
   "item.jolcraft.contract_blank": "Blank Contract",
   "item.jolcraft.contract_written": "Written Contract",
   "item.jolcraft.contract_signed": "Signed Contract",
+
+  "item.jolcraft.contract_merchant": "Merchant Contract",
+  "item.jolcraft.contract_historian": "Historian Contract",
+  "item.jolcraft.contract_scrapper": "Scrapper Contract",
   "item.jolcraft.contract_guard": "Guard Contract",
+  "item.jolcraft.contract_brewmaster": "Brewmaster Contract",
+  "item.jolcraft.contract_keeper": "Keeper Contract",
+  "item.jolcraft.contract_miner": "Miner Contract",
+  "item.jolcraft.contract_explorer": "Explorer Contract",
+  "item.jolcraft.contract_alchemist": "Alchemist Contract",
+  "item.jolcraft.contract_arcanist": "Arcanist Contract",
+  "item.jolcraft.contract_priest": "Priest Contract",
+  "item.jolcraft.contract_artisan": "Artisan Contract",
+  "item.jolcraft.contract_champion": "Champion Contract",
+  "item.jolcraft.contract_blacksmith": "Blacksmith Contract",
+  "item.jolcraft.contract_smelter": "Smelter Contract",
 
   "item.jolcraft.dwarf_spawn_egg": "Dwarf Spawn Egg",
+  "item.jolcraft.dwarf_guildmaster_spawn_egg": "Dwarf Guildmaster Spawn Egg",
   "item.jolcraft.dwarf_guard_spawn_egg": "Dwarf Guard Spawn Egg",
   "item.jolcraft.dwarf_historian_spawn_egg": "Dwarf Historian Spawn Egg",
   "item.jolcraft.dwarf_scrapper_spawn_egg": "Dwarf Scrapper Spawn Egg",
@@ -120,6 +136,7 @@
   "advancement.jolcraft.trade_with_dwarf.description": "Trade with a dwarf.",
 
   "entity.jolcraft.dwarf": "Dwarf",
+  "entity.jolcraft.dwarf_guildmaster": "Guildmaster",
   "entity.jolcraft.dwarf_guard": "Guard",
   "entity.jolcraft.dwarf_historian": "Historian",
   "entity.jolcraft.dwarf_scrapper": "Scrapper",
