--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -6,6 +6,10 @@
   "block.jolcraft.barley_crop": "Dwarven Barley Crops",
   "item.jolcraft.barley": "Dwarven Barley",
   "item.jolcraft.barley_malt": "Dwarven Malt",
+  "item.jolcraft.asgarnian_seeds": "Asgarnian Seeds",
+  "block.jolcraft.asgarnian_crop_bottom": "Asgarnian Hops",
+  "block.jolcraft.asgarnian_crop_top": "Asgarnian Hops",
+  "item.jolcraft.asgarnian_hops": "Asgarnian Hops",
   "block.jolcraft.fermenting_cauldron": "Fermenting Cauldron",
   "block.jolcraft.fermenting_fluid": "Fermenting Fluid",
   "item.jolcraft.yeast": "Dwarven Yeast",
