--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -28,6 +28,8 @@
   "item.jolcraft.yeast": "Dwarven Yeast",
   "item.jolcraft.glass_mug": "Glass Mug",
   "item.jolcraft.dwarven_brew": "Dwarven Brew",
+  "item.jolcraft.deepslate_bulbs": "Deepslate Bulbs",
+  "block.jolcraft.deepslate_bulbs_crop": "Deepslate Bulbs Crop",
 
   "item.jolcraft.muffhorn_milk_bucket": "Muffhorn Milk Bucket",
   "item.jolcraft.muffhorn_fur": "Muffhorn Fur",
