small cauldron overhaul for blockstate

--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -14,11 +14,13 @@
   "item.jolcraft.deepslate_leggings": "Deepslate Leggings",
   "item.jolcraft.deepslate_boots": "Deepslate Boots",
 
-  "item.jolcraft.barley_seeds": "Dwarven Barley Seeds",
-  "block.jolcraft.barley_crop": "Dwarven Barley Crops",
-  "item.jolcraft.barley": "Dwarven Barley",
+  "item.jolcraft.inverix": "Inverix",
+
+  "item.jolcraft.barley_seeds": "Barley Seeds",
+  "block.jolcraft.barley_crop": "Barley Crops",
+  "item.jolcraft.barley": "Barley",
   "block.jolcraft.barley_block": "Barley Hay Bale",
-  "item.jolcraft.barley_malt": "Dwarven Malt",
+  "item.jolcraft.barley_malt": "Barley Malt",
   "item.jolcraft.asgarnian_seeds": "Asgarnian Seeds",
   "block.jolcraft.asgarnian_crop_bottom": "Asgarnian Hops",
   "block.jolcraft.asgarnian_crop_top": "Asgarnian Hops",
@@ -37,7 +39,7 @@
   "item.jolcraft.yanillian_hops": "Yanillian Hops",
   "block.jolcraft.fermenting_cauldron": "Fermenting Cauldron",
   "block.jolcraft.fermenting_fluid": "Fermenting Fluid",
-  "item.jolcraft.yeast": "Dwarven Yeast",
+  "item.jolcraft.yeast": "Brewing Yeast",
   "item.jolcraft.glass_mug": "Glass Mug",
   "item.jolcraft.dwarven_brew": "Dwarven Brew",
   "item.jolcraft.deepslate_bulbs": "Deepslate Bulbs",
